--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -22,7 +22,7 @@
 <link href="/styles/digital-garden-base.css" rel="stylesheet">
 {%-if meta.themeStyle%}
     <link href="/styles/obsidian-base.css" rel="stylesheet">
-    <link href="{{meta.themeStyle}}" rel="stylesheet">
+    {{meta.themeStyle | safe}}
 {% else %}
     <link href="/styles/style.css" rel="stylesheet">
 {%endif%}
@@ -32,26 +32,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap" rel="stylesheet"> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/dayjs.min.js" integrity="sha512-hcV6DX35BKgiTiWYrJgPbu3FxS6CsCjKgmrsPRpUPkXWbvPiKxvSVSdhWX0yXcPctOI2FJ4WP6N1zH+17B/sAA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 {% favicon './src/site/favicon.svg' %}
+
 {% if metatags %}
     {% for name, content in metatags %}
         <meta name="{{ name }}" content="{{ content }}">
     {% endfor %}
-    {% if not metatags["og:image"] %}
-        {% if maturity %}
-            <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-{{maturity}}-cover.jpg">
-        {% else %}
-            <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-1-cover.jpg">
-        {% endif %}
-    {% endif %}
-{% else %}
-    {% if maturity %}
-        <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-{{maturity}}-cover.jpg">
-    {% else %}
-        <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-1-cover.jpg">
-    {% endif %}
 {% endif %}
