--- a/src/site/_includes/components/graphScript.njk
+++ b/src/site/_includes/components/graphScript.njk
@@ -7,15 +7,13 @@
         return doc.documentElement.textContent;
     }
 
-
     const backLinks = [
 
         {%- for backlink in backlinks -%}
             {
                 id: {{backlink.id}},
                 title: "{{backlink.title | safe}}",
-                url: "{{backlink.url}}",
-                isHome: {{backlink.isHome}}
+                url: "{{backlink.url}}"
             },
         {%- endfor -%}
     ];
@@ -26,8 +24,7 @@
             {
                 id: {{out.id}},
                 title: "{{out.title | safe}}",
-                url: "{{out.url}}",
-                isHome: {{out.isHome}}
+                url: "{{out.url}}"
             },
         {%- endfor -%}
     ].map(x => {
@@ -35,7 +32,7 @@
         return x;
     });
 
-    const outboundDuplicatesRemoved = outbound.filter(x => !x.isHome && !backLinks.find(b => b.url === x.url));
+    const outboundDuplicatesRemoved = outbound.filter(x => !backLinks.find(b => b.url === x.url));
 
     const title = "{{page.fileSlug}}" || "Home"
     const currentNode = {
@@ -44,21 +41,17 @@
         url: "{{page.url}}"
     };
 
-
-    const homeRemovedBackLinks = currentNode.title == "Home" ? backLinks : backLinks.filter(x => !x.isHome);
-
     const gData = {
         nodes: [
             currentNode, 
-            ...homeRemovedBackLinks,
+            ...backLinks,
             ...outboundDuplicatesRemoved
         ],
         links: [
-            ...homeRemovedBackLinks.map(backlink => ({source: backlink.id, target: 0})),
+            ...backLinks.map(backlink => ({source: backlink.id, target: 0})),
             ...outboundDuplicatesRemoved.map(outlink => ({source: 0, target: outlink.id}))
         ]
     };
-
 
     gData
         .links
@@ -136,5 +129,5 @@
             }, 10);
     }
 
-    renderGraph(330,300);
+    renderGraph(320,320);
 </script>
