--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -51,7 +51,7 @@ tree_titles:
           </div>
         {% endif %}
       </div>
-      {{ content | link | highlight | safe}}
+      {{ content | link | taggify | highlight | safe}}
     </div>
 
     {% if settings.dgShowBacklinks === true or settings.dgShowLocalGraph === true or settings.dgShowToc === true%}
