--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -21,7 +21,7 @@
       {% endif %}
       {% include "components/forest.njk" %}
       {%- for garden in collections.gardenEntry -%}
-        {{garden.templateContent | link | taggify | highlight | safe }}
+        {{garden.templateContent | hideDataview | link | taggify | highlight | safe }}
       {%- endfor -%}
     </div>
 
