google meta tags

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>{{ noteTitle }}</title>
+    <meta name="google-site-verification" content="yaG9aMIkyWztf-xMSpBoNH-6GdUYIstE-PUpHhZFR2U" />
     {%include "components/pageheader.njk"%}
   </head>
   <body class="theme-{{meta.baseTheme}} markdown-preview-view markdown-rendered markdown-preview-section">
