--- a/src/site/_includes/layouts/versionednote.njk
+++ b/src/site/_includes/layouts/versionednote.njk
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="content">
-        {{ item.content | safe}}
+        {{ item.content | hideDataview | link | taggify | highlight | safe }}
       </div>
     </body>
   </html>
