--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -6,6 +6,7 @@
                         <div class="graph">
                               <div class="graph-title-container">
                                     <div class="graph-title">Connected Pages</div>
+                                    <i class="fa fa-arrows-alt" id="graph-full-btn" aria-hidden="true"></i>
                               </div>
                               <div id="link-graph"></div>
                         </div>
