--- a/src/site/_includes/components/graphScript.njk
+++ b/src/site/_includes/components/graphScript.njk
@@ -49,8 +49,9 @@
             .nodeLabel('title')
             .linkSource('source')
             .nodeCanvasObject((node, ctx) => {
+                const numberOfLinks = (node.outBound && node.outBound.length) || 2;
                     const numberOfNeighbours = (node.neighbors && node.neighbors.length) || 2;
-                    const nodeR = Math.min(7, Math.max(numberOfNeighbours / 2, 2));
+                    const nodeR = Math.min(7, Math.max((numberOfLinks + numberOfNeighbours) / 2, 2));
                     ctx.beginPath();
                     ctx.arc(node.x, node.y, nodeR, 0, 2 * Math.PI, false);
                     ctx.fillStyle = getCssVar("--text-accent");
