--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -6,7 +6,14 @@
                         <div class="graph">
                               <div class="graph-title-container">
                                     <div class="graph-title">Connected Pages</div>
-                                    <i class="fa fa-arrows-alt" id="graph-full-btn" aria-hidden="true"></i>
+                                    <div id="graph-controls">
+                                          <div class="depth-control">
+                                                <label for="graph-depth">Depth</label>
+                                                <input name="graph-depth" type="range" step="1" min="1" max="3" id="graph-depth"/>
+                                                <span id="depth-display"></span>
+                                          </div>
+                                          <i class="fa fa-arrows-alt" id="graph-full-btn" aria-hidden="true"></i>
+                                    </div>
                               </div>
                               <div id="link-graph"></div>
                         </div>
