--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -1,4 +1,4 @@
-<div>
+<aside>
       <div class="sidebar">
             <div class="sidebar-container">
 
@@ -58,7 +58,7 @@
                                     {%endif%}
                               </div>
                         </div>
-                  </div>
+                  </aside>
 
                   {%if settings.dgShowLocalGraph === true %}
                         {%include "components/graphScript.njk"%}
