--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -15,16 +15,19 @@
     {% if settings.dgEnableSearch === true %}
       {%include "components/searchContainer.njk"%}
     {% endif %}
-    <div class="content cm-s-obsidian">
+    <main class="content cm-s-obsidian">
 
-      {% if settings.dgShowInlineTitle === true %}
+      <header>
+        {% if settings.dgShowInlineTitle === true %}
         <h1>{{ noteTitle }}</h1>
       {% endif %}
+      
       {% include "components/forest.njk" %}
+      </header>
       {%- for garden in collections.gardenEntry -%}
         {{garden.templateContent | hideDataview | link | taggify | highlight | safe }}
       {%- endfor -%}
-    </div>
+    </main>
 
     {% if settings.dgShowBacklinks === true or settings.dgShowLocalGraph === true or settings.dgShowToc === true%}
       {%include "components/sidebar.njk" %}
