--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -53,7 +53,18 @@ tree_titles:
         {% endif %}
       </div>
       </header>
+      {%- if tags and 'reading-notes' in tags or 'reading-note' in tags -%}
+      {%- for note in collections.note -%}
+      {%- if note.data.tags and 'reading-convention' in note.data.tags -%}
+      <div class="callout-info admonition admonition-example admonition-plugin">
+          <div class="admonition-title">{{ note.data.title or note.fileSlug }}<br></div>
+          {{ note.templateContent | hideDataview | link | taggify | highlight | safe}}
+      </div>
+      {%- endif -%}
+      {%- endfor -%}
+      {%- endif -%}
       {{ content | hideDataview | link | taggify | highlight | safe}}
+      
     </main>
 
     {% if settings.dgShowBacklinks === true or settings.dgShowLocalGraph === true or settings.dgShowToc === true%}
