depth slider enhancements

--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -9,7 +9,14 @@
                                     <div id="graph-controls">
                                           <div class="depth-control">
                                                 <label for="graph-depth">Depth</label>
-                                                <input name="graph-depth" type="range" step="1" min="1" max="3" id="graph-depth"/>
+                                                <div class="slider">
+                                                      <input name="graph-depth" list="depthmarkers" type="range" step="1" min="1" max="3" id="graph-depth"/>
+                                                <datalist id="depthmarkers">
+                                                      <option value="1" label="1"></option>
+                                                      <option value="2" label="2"></option>
+                                                      <option value="3" label="3"></option>
+                                                </datalist>
+                                                </div>
                                                 <span id="depth-display"></span>
                                           </div>
                                           <i class="fa fa-arrows-alt" id="graph-full-btn" aria-hidden="true"></i>
