--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -579,6 +579,34 @@ div.admonition-title {
     .depth-control {
         display: flex;
         flex-direction: row;
-        gap: 5px;
+        align-items: flex-start;
+        gap: 7px;
+        
+        .slider {
+            datalist {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                font-size: 0.6rem;
+                // padding: 2px 0px;
+                // width: 200px;
+            }
+
+            option {
+                padding: 0;
+            }
+        }
+
+        #depth-display {
+            background-color: var(--text-accent);
+            color: white;
+            width: 1rem;
+            height: 1rem;
+            font-size: 0.8rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 0.3rem;
+        }
     }
 }
