--- a/src/site/_includes/components/linkPreview.njk
+++ b/src/site/_includes/components/linkPreview.njk
@@ -64,26 +64,40 @@
     var elem = event.target;
     var elem_props = elem.getClientRects()[elem.getClientRects().length - 1];
     var top = window.pageYOffset || document.documentElement.scrollTop;
-    if (event.target.getAttribute("href").indexOf("http") === -1 || event.target.getAttribute("href").indexOf(window.location.host) !== -1) {
-      if (!linkHistories[event.target.getAttribute("href")]) {
-        iframe.src = event.target.getAttribute("href")
+    var url = event.target.getAttribute("href");
+    if (url.indexOf("http") === -1 || url.indexOf(window.location.host) !== -1) {
+      let contentURL = url.split('#')[0]
+      if (!linkHistories[contentURL]) {
+        iframe.src = contentURL
         iframe.onload = function () {
           tooltipContentHtml = ''
           tooltipContentHtml += '<div style="font-weight: bold; unicode-bidi: plaintext;">' + iframe.contentWindow.document.querySelector('h1').innerHTML + '</div>'
           tooltipContentHtml += iframe.contentWindow.document.querySelector('.content').innerHTML
           tooltipContent.innerHTML = tooltipContentHtml
-          linkHistories[event.target.getAttribute("href")] = tooltipContentHtml
+          linkHistories[contentURL] = tooltipContentHtml
           tooltipWrapper.style.display = 'block';
           tooltipWrapper.scrollTop = 0;
           setTimeout(function () {
             tooltipWrapper.style.opacity = 1;
+            if (url.indexOf("#") != -1) {
+              let id = url.split('#')[1];
+              tooltipWrapper.querySelector(`[id='${id}']`).scrollIntoView({behavior: 'smooth'}, true)
+            } else {
+              tooltipWrapper.scroll(0, 0);
+            }
           }, 1)
         }
       } else {
-        tooltipContent.innerHTML = linkHistories[event.target.getAttribute("href")]
+        tooltipContent.innerHTML = linkHistories[contentURL]
         tooltipWrapper.style.display = 'block';
         setTimeout(function () {
           tooltipWrapper.style.opacity = 1;
+          if (url.indexOf("#") != -1) {
+              let id = url.split('#')[1];
+              tooltipWrapper.querySelector(`[id='${id}']`).scrollIntoView({behavior: 'smooth'}, true)
+          } else {
+              tooltipWrapper.scroll(0, 0);
+          }
         }, 1)
       }
 
