--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -21,6 +21,19 @@
         {% if settings.dgShowInlineTitle === true %}
         <h1>{{ noteTitle }}</h1>
       {% endif %}
+      <div class="header-meta">
+        {% if settings.dgShowTags === true and tags %}
+          <div class="header-tags">
+            {% for tag in tags %}
+              {% if tag != 'gardenEntry' and tag !='note' %}
+                <a class="tag" onclick="toggleTagSearch(this)">
+                  #{{tag}}
+                </a>
+              {% endif %}
+            {% endfor %}
+          </div>
+        {% endif %}
+      </div>
       
       {% include "components/forest.njk" %}
       </header>
