reference focus on preview

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -149,7 +149,7 @@ body {
         }
     }
 
-    .content > .referred {
+    .referred {
         border: 1px dashed;
         border-color: var(--text-accent);
         padding: 10px;  
