--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -135,7 +135,7 @@ body {
             padding: 10px;
         }
         &:hover::before {
-            content: "Double-click to copy";
+            content: "Double-click to copy link";
             position: absolute;
             right: 0;
             top: -1.55em;
