--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -53,11 +53,23 @@
                                                             <span class="no-backlinks-message">No other pages mentions this page</span>
                                                       </div>
                                                 {%- endif -%}
-                                                {%- for backlink in graph.nodes[page.url].backLinks -%}
+                                                {%- if page.url == "/" -%}
+                                                {%- for backlink in graph.nodes[graph.homeAlias].backLinks -%}
+                                                      {%- if graph.nodes[backlink].url != graph.homeAlias -%}
                                                       <div class="backlink-card">
                                                             <i class="fa fa-link"></i> <a href="{{graph.nodes[backlink].url}}">{{graph.nodes[backlink].title}}</a>
                                                       </div>
+                                                      {%- endif -%}
                                                 {%- endfor -%}
+                                                {%- else -%}
+                                                {%- for backlink in graph.nodes[page.url].backLinks -%}
+                                                      {%- if graph.nodes[backlink].url != page.url -%}
+                                                      <div class="backlink-card">
+                                                            <i class="fa fa-link"></i> <a href="{{graph.nodes[backlink].url}}">{{graph.nodes[backlink].title}}</a>
+                                                      </div>
+                                                      {%- endif -%}
+                                                {%- endfor -%}
+                                                {%- endif -%}
                                                 </div>
                                     </div>
                                     {%endif%}
